[package]
name = "aleo-wasm"
version = "0.3.5"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Aleo"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/aleo"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies.aleo-rust]
version = "0.3.4"
path = "../rust"
features = [ "wasm" ]
default-features = false

[dependencies.anyhow]
version = "1.0"

[dependencies.getrandom]
version = "0.2"
features = [ "js" ]

[dependencies.hex]
version = "0.4.3"

[dependencies.rand]
version = "0.8"

[dependencies.serde_json]
version = "1.0"
features = [ "preserve_order" ]

[dependencies.snarkvm-synthesizer]
path="../../snarkVM/synthesizer"
version = "0.9.13"
default-features = false
features = [ "wasm" ]

[dependencies.snarkvm-console]
path="../../snarkVM/console"
version = "0.9.13"
default-features = false

[dependencies.snarkvm-wasm]
path="../../snarkVM/wasm"
version = "0.9.13"

[dependencies.wasm-bindgen]
version = "0.2"
features = [ "serde-serialize" ]

[dependencies.js-sys]
version = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde-wasm-bindgen]
version = "0.4"

[dependencies.console_error_panic_hook]
version = "0.1.7"

[dependencies.rand_chacha]
version = "0.3.1"

[dev-dependencies.wasm-bindgen-test]
version = "0.3.33"

[profile.release]
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.debug]
wasm-opt = ["-O4"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
